tests/ui/async-await/in-trait/dyn-compatibility.stderr
error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/dyn-compatibility.rs:9:12
   |
LL |     let x: &dyn Foo = todo!();
   |            ^^^^^^^^ `Foo` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/dyn-compatibility.rs:5:14
   |
LL | trait Foo {
   |       --- this trait cannot be made into an object...
LL |     async fn foo(&self);
   |              ^^^ ...because method `foo` is `async`
   = help: consider moving `foo` to another trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
